<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00BCD4"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:fontFamily="@font/actor"
        android:text="@string/txt_bienvenida"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.153" />

    <Button
        android:id="@+id/btn"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="269dp"
        android:text="@string/txt_btnDiseñar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnVer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="68dp"
        android:text="@string/txt_btnVer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:contentDescription="@string/aggHorario"
        app:backgroundTint="#FFFFFF"
        app:backgroundTintMode="add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVer"
        app:rippleColor="#FDFFFFFF"
        app:srcCompat="@android:drawable/ic_menu_add"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>