<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerActivity">

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="500dp"
        android:fontFamily="@font/actor"
        android:text="Guardar"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/viewGrado"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="348dp"
        android:fontFamily="@font/actor"
        android:text="@string/grado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtGrad"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="152dp"
        android:ems="10"
        android:hint="0-11"
        android:inputType="number"
        android:labelFor="@id/viewGrado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClase" />

    <EditText
        android:id="@+id/txtMateri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/materia"
        android:inputType="textPersonName"
        android:labelFor="@id/viewMateria"
        android:minHeight="48dp"
        android:textColor="#000000"

        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewMateria" />

    <TextView
        android:id="@+id/viewMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/actor"
        android:text="Clase: "
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtClase"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:ems="10"
        android:hint="Clases que se veran en el año"
        android:inputType="number"
        android:labelFor="@id/viewClases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewClases" />

    <TextView
        android:id="@+id/viewClases"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/actor"
        android:text="@string/numClases"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMateri" />

    <TextView
        android:id="@+id/viewEstudiantes"
        android:layout_width="214dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="264dp"
        android:fontFamily="@font/actor"
        android:text="@string/numEstudiantes"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="404dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_edit_24" />
</androidx.constraintlayout.widget.ConstraintLayout>