<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearActivity"
    tools:visibility="visible">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/actor"
        android:text="@string/grado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/actor"
        android:text="@string/grado"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/salon"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="A-Z"
        android:inputType="textCapCharacters"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numClases" />

    <EditText
        android:id="@+id/grado"
        android:layout_width="86dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="136dp"
        android:ems="10"
        android:hint="0-11"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numClases" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="87dp"
        android:layout_height="27dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="376dp"
        android:fontFamily="@font/actor"
        android:text="Salon"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eMateria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:fontFamily="@font/actor"
        android:hint="@string/materia"

        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColor="#000000"
        android:textSize="20sp"

        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/actor"
        android:text="@string/registroClase"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/actor"
        android:text="@string/materia"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <EditText
        android:id="@+id/numClases"
        android:layout_width="269dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="Clases que se veran en el año"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eMateria" />

    <Button
        android:id="@+id/guardar"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="468dp"
        android:fontFamily="@font/actor"
        android:text="Guardar"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/btnVolver"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="164dp"
        android:layout_height="63dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="468dp"
        android:fontFamily="@font/actor"
        android:text="Volver"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guardar"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="165dp"
        android:layout_height="29dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="196dp"
        android:fontFamily="@font/actor"
        android:text="@string/numClases"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Estudiantes"
        android:layout_width="214dp"
        android:layout_height="23dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="308dp"
        android:fontFamily="@font/actor"
        android:text="@string/numEstudiantes"
        android:textColor="#000000"
        android:textSize="20sp"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>